Refactor GC code, hopefully fix concurrency and race condition issues
Attempting new method of GC use wherein game starts are done on-demand
and we close after a given idle period. Similarly to a player getting
bored and hopefully dealing with some backpack freshness issues. Though
the timestamp used for the inv might need to be revisited

Adds reliable support for switching between tf2 and csgo features/invs
by just playing one game at a time as steam expects.

Adds EOF line terminator for ajax API output just to make output less
annoying

Cleans up Bot connect signature so that ctor takes and validates an
options object instead of a bunch of params to allow future
extensibility and avoid 4 ctor params now

Adds Bot.playGame and Bot.closeGame for a bit of enforced consistency to
help with GC use

DEFAULT_VALUES / config.json.example / README consistency updates

Move GC client logic to Bot.getGc and try to be strategic rather than
frontloading all the things ever if we find client libs per new method

--- a/config.json.example
+++ b/config.json.example
@@ -1,7 +1,15 @@
 {
+    "appId": 730,
     "dataDir": "data",
     "logDir": "logs",
     "logLevel": "info",
+    "ajax": {
+        "host": "127.0.0.1",
+        "port": 5244,
+        "sslCert": "<cert path or null for plain http>",
+        "sslKey": "<cert key or null for plain http>",
+        "enabled": false
+    },
     "proxies": [
         "http://some.proxy:1234"
     ],
@@ -11,14 +19,8 @@
     "bots": [
         {
             "username": "foobarbazbot",
-            "password": "goodpassword"
+            "password": "goodpassword",
+            "personaName": "Bot 42"
         }
-    ],
-    "ajax": {
-        "host": "0.0.0.0",
-        "port": 5244,
-        "sslCert": "<cert path or null for plain http>",
-        "sslKey": "<cert key or null for plain http>",
-        "enabled": false
-    }
+    ]
 }
